# rigger

./: .gitattributes  .gitignore  .golangci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  go.mod  go.sum
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  rust.yml  shim.yml
.rigger/: project.id  workflow.yml
.rigger/agents/: adjudicator.md  adversary.md  architecture-reviewer.md  planner.md  rust-engineer.md  scribe.md  sdet-author.md  sdet.md
agents/: architecture-reviewer.md  go-engineer.md  harness-engineer.md  js-engineer.md  sdet.md
canaries/: clean-bounded-iteration.md  clean-checked-add.md  fail-open-auth-guard.md  off-by-one-window-sum.md  resource-leak-scratch-file.md  swallowed-write-error.md
cmd/rigger/: main.go
conductor/: conductor.go  conductor_test.go
config/: config.go  load.go  load_test.go
contextgraph/: contextgraph.go
contextgraph/sqlite/: sqlite.go  sqlite_test.go
docs/: architecture-addendum-concept-graph.md  architecture-addendum-context-management.md  architecture-addendum-grounding-as-tool.md  architecture-addendum-loop-execution-at-scale.md  architecture-addendum-pit-of-success.md  architecture.md  design-intent-gaps.md  spec-conformance.md
docs/handbook/: README.md  agentic-sdlc.md  authoring-agents.md  authoring-loops.md  best-practices.md  tools-and-context.md  using-rigger.md
docs/plans/: 0001-event-store.md  0002-pit-of-success.md  0003-context-management.md
docs/research/: 2026-07-03-improvement-program.md  2026-07-07-context-vs-memory-eval.md  2026-07-15-context-management-pruning-kg-consolidation.md
docs/superpowers/plans/: 2026-07-09-symbol-index-grounder.md
docs/superpowers/plans/notes/: symbols-replay-eval.md
docs/superpowers/specs/: 2026-07-01-gaps-campaign-design.md
driver/cli/: cli.go  cli_test.go
driver/workflow/: README.md  workflow.go  workflow_test.go
eventstore/: eventstore.go  eventstore_test.go
eventstore/eventstoretest/: contract.go
eventstore/kurrentdb/: kurrentdb.go  kurrentdb_test.go
eventstore/namespace/: namespace.go  namespace_test.go
eventstore/sqlite/: sqlite.go  sqlite_test.go
examples/demo/: README.md
examples/demo/.rigger/: workflow.yml
examples/demo/.rigger/agents/: adjudicator.md  adversary.md  implementer.md  planner.md  reviewer.api-design.md  reviewer.architecture.md  reviewer.correctness.md
examples/golden-apple/: README.md
examples/golden-apple/.rigger/: workflow.yml
examples/golden-apple/.rigger/agents/: adversary.md  devils-advocate.md  integrator.md  reviewer.architecture.md  reviewer.game-design.md  reviewer.technical.md
gate/: exec.go  gate.go  gate_test.go
grounder/: grounder.go  grounder_test.go
grounder/turbovec/: doc.go  index.go  index.h  index_test.go
grounder/turbovec/shim/: Cargo.toml
grounder/turbovec/shim/src/: lib.rs
hooks/: hooks.go  hooks_test.go
ledger/: ledger.go  ledger_test.go
mcpserver/: mcpserver.go  mcpserver_test.go
safety/: safety.go  safety_test.go
shim/: README.md  mock-rigger-server.mjs  mock-rigger-slow-start.mjs  package-lock.json  package.json  shim.mjs  shim.test.mjs
sidecar/: sidecar.go  sidecar_test.go
skills/using-rigger/: SKILL.md
spec/: spec.go  spec_test.go
specs/: 01-observability.md  02-targeted-remediation.md  03-adaptive-review.md  04-stepwise-conductor.md  05-review-hardening-and-setup-hygiene.md  06-conductor-hardening.md  07-review-infrastructure-hardening.md  08-housekeeping-delivery.md  09-durable-project-identity.md  10-quick-wins.md  11-observability.md  12-verify-only-what-changed.md  13-self-improving-harness.md  13b-judge-the-judges.md  14-live-agent-activity.md  15-symbol-index-grounder.md  16-structural-blast-radius.md  17-code-intelligence-review-fixes.md  18-fail-fast-validation.md  19a-observability-surfaces.md  19b-dashboard-and-lifecycle.md  19c-loud-failure-surfacing.md  20-self-documenting-discipline.md  21-provenance-and-pruning.md  22-guard-run-lifecycle-emit.md  23-reap-worktree-rooted-processes.md  24-docs-regenerate-at-commit.md  25-disposition-expiry.md  26-dedup-dependency-restore.md  27-consolidation-distiller.md  28-graph-project-scoping.md  29a-code-ingest-as-events.md  29b-design-intent-ingest.md  29c-unified-traversal-tiers.md  30-dash-redesign-and-kg-panel.md  31-idempotent-plan-refine.md  32-sdet-periphery-testing.md  33-sdet-author-spawn-wiring.md  34-scratch-garbage-collection.md  36-grounding-trim-push-to-intent.md  (+6 more)
src/: blast_radius_eval.rs  blocker.rs  canary.rs  conductor.rs  config.rs  dash.html  dash.rs  distiller.rs  docs.rs  failure.rs  gate.rs  hooks.rs  ledger.rs  lib.rs  liveness.rs  main.rs  mcpserver.rs  metrics.rs  ort_runtime.rs  ort_teardown.rs  playbooks.rs  progress.rs  reap.rs  run.rs  safety.rs  sidecar.rs  spawn.rs  spec.rs  worktree.rs
src/contextgraph/: mod.rs  sqlite.rs
src/driver/: cli.rs  mod.rs  replay.rs  workflow.rs
src/eventstore/: contract.rs  kurrentdb.rs  mod.rs  namespace.rs  sqlite.rs
src/grounder/: mod.rs  turbovec.rs
src/grounder/design/: events.rs  extract.rs  mod.rs  model.rs
src/grounder/symbols/: events.rs  extract.rs  grounder.rs  hybrid.rs  mod.rs  model.rs  registry.rs  store.rs
tests/: ci_lanes.rs  cli.rs  code_ingest_events.rs  confidence_tier_blast_radius.rs  dash_cluster_detail_drill.rs  dash_decisions_progressive_disclosure.rs  dash_exploration_route_client_contract.rs  dash_graph_exploration_fold.rs  dash_graph_exploration_overview.rs  dash_graph_exploration_viz.rs  dash_kg_graph_route.rs  dash_release_ready.rs  dash_run_tree_spine.rs  design_intent_events.rs  graph_fold_dedup_live_edge.rs  graph_fold_dedup_live_only_scoping.rs  graph_rebuild_collapses_dupes.rs  graph_superseded_prune.rs  live_project_ingestion.rs  symbol_ref_caller_attribution.rs  unified_traversal_grounding.rs
tests/fixtures/: fake-agent.sh
workflows/: rigger.js
worktree/: worktree.go  worktree_test.go
