[package]
name = "rigger"
version = "0.1.0"
edition = "2021"
description = "A config-driven, event-sourced multi-agent dev-loop harness"
license = "MIT"
repository = "https://github.com/virtual-velocitation/rigger"

[lib]
name = "rigger"
path = "src/lib.rs"

[[bin]]
name = "rigger"
path = "src/main.rs"

[features]
# Turbovec (semantic vector grounding) is ON BY DEFAULT: it is the real grounder
# the loop is meant to run, so a plain `cargo build` / `cargo install` ships it.
# It pulls the ONNX runtime + fastembed and downloads an embedding model on first
# use, so `--no-default-features` is the deliberate light opt-out (grep-only).
default = ["turbovec"]
# The real turbovec engine (semantic vector grounding) + fastembed. `ort` is the
# ONNX Runtime backend fastembed already pulls; we depend on it directly only to
# reach its execution-provider types (CUDA/CPU), so the grounder can request a
# GPU EP with a CPU fallback. fastembed's `ort-download-binaries` still provides
# the runtime itself - we pin the SAME ort version and take no default features.
turbovec = ["dep:turbovec", "dep:fastembed", "dep:ort"]
# The KurrentDB EventStore adapter (the trait's server-backed implementation). It
# pulls the async gRPC client + a tokio runtime; testcontainers drives its
# contract test against a real KurrentDB.
kurrentdb = ["dep:kurrentdb", "dep:tokio", "dep:testcontainers"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
turbovec = { git = "https://github.com/RyanCodrai/turbovec", optional = true }
fastembed = { version = "4", optional = true }
# Pinned to the exact version fastembed 4.9 resolves, with no default features:
# we want only the execution-provider type definitions (CUDA/CPU EPs), not to
# manage the ONNX Runtime binaries - fastembed's `ort-download-binaries` does that.
ort = { version = "=2.0.0-rc.9", default-features = false, optional = true }
kurrentdb = { version = "1.2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
testcontainers = { version = "0.27", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
