[package]
name = "rigger"
version = "0.1.0"
edition = "2021"
description = "A config-driven, event-sourced multi-agent dev-loop harness"
license = "MIT"
repository = "https://github.com/virtual-velocitation/rigger"

[lib]
name = "rigger"
path = "src/lib.rs"

[[bin]]
name = "rigger"
path = "src/main.rs"

[features]
# Turbovec (semantic vector grounding) is ON BY DEFAULT: it is the real grounder
# the loop is meant to run, so a plain `cargo build` / `cargo install` ships it.
# It pulls the ONNX runtime + fastembed and downloads an embedding model on first
# use, so `--no-default-features` is the deliberate light opt-out (grep-only).
default = ["turbovec", "symbols"]
# The real turbovec engine (semantic vector grounding) + fastembed. `ort` is the
# ONNX Runtime backend fastembed already pulls; we depend on it directly only to
# reach its execution-provider types (CUDA/CPU), so the grounder can request a
# GPU EP with a CPU fallback. fastembed's `ort-download-binaries` still provides
# the runtime itself - we pin the SAME ort version and take no default features.
turbovec = ["dep:turbovec", "dep:fastembed", "dep:ort", "dep:ort-sys", "dep:libc"]
# Deterministic, dependency-light STRUCTURAL grounding (spec 15): tree-sitter parsers +
# the tags mechanism, compiled into the binary (no runtime-loaded artifacts). Carried in
# `default` exactly as `turbovec` is, so a plain `cargo build` ships it; a minimal build
# drops it via `--no-default-features`. Unit 1 gates ONLY the tree-sitter-touching code
# (extraction); the parser-free data model compiles in BOTH lanes. The grammar crates
# depend on `tree-sitter` only as a dev-dep and couple at runtime through
# `tree-sitter-language`, so this set is ABI-pinned by `tree-sitter-tags` (which requires
# an exact `tree-sitter` minor); unit 2 extends this feature with the other four grammars.
symbols = ["dep:tree-sitter", "dep:tree-sitter-tags", "dep:tree-sitter-rust"]
# The KurrentDB EventStore adapter (the trait's server-backed implementation). It
# pulls the async gRPC client + a tokio runtime; testcontainers drives its
# contract test against a real KurrentDB.
kurrentdb = ["dep:kurrentdb", "dep:tokio", "dep:testcontainers"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
# The declarative failure taxonomy (spec 10, unit 2) matches a failure's captured
# output against a rule's `output_regex`. Pure-Rust, already in the default build's
# tree transitively (via fastembed); made a direct dependency so the light
# (`--no-default-features`) lane compiles it too.
regex = "1"
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# Cross-process advisory file lock (`flock` under the hood) that SERIALIZES `rigger step`
# (see `acquire_step_lock`). Two steps running at once run two `cargo test` gates whose
# grounder subprocesses construct ORT/CUDA sessions CONCURRENTLY ACROSS PROCESSES - the
# documented heap-corruption/deadlock hazard (see the turbovec test-serial note below). A
# single step's gate already serializes its own construction, so overlapping steps are the
# only source of cross-process concurrency. Non-optional: the lock must hold in BOTH feature
# lanes. `fs2` releases the lock when the file drops OR the process dies (even on kill), so a
# crashed step never leaves a stale lock wedging the run.
fs2 = "0.4"
turbovec = { git = "https://github.com/RyanCodrai/turbovec", optional = true }
fastembed = { version = "4", optional = true }
# Pinned to the exact ONNX Runtime version fastembed 4.9 resolves. The `cuda` feature
# makes ort-sys download the GPU-enabled ONNX Runtime (CUDA + TensorRT providers) into
# its dfbin cache (~/.cache/ort.pyke.io/dfbin/<triple>/<hash>/onnxruntime/lib/). We load
# that runtime DYNAMICALLY (`load-dynamic`): ort `dlopen`s an external libonnxruntime.so
# chosen at RUNTIME via the `ORT_DYLIB_PATH` env var rather than linking a static lib.
# `src/ort_runtime.rs` sets `ORT_DYLIB_PATH` at the start of `main` - respecting an
# already-set value, else the CUDA-enabled .so next to the executable, else the newest
# in the ort dfbin cache - so both the standalone AND the `cargo install`ed binary find
# the runtime with no user-set env. `copy-dylibs` is intentionally dropped: with
# `load-dynamic` there is no linked lib to copy, and the dfbin cache is the discovery
# source. The CUDA provider `.so` lives beside libonnxruntime.so (ort finds it relative
# to the dylib) and its NEEDED CUDA 12 + cuDNN 9 libs are ldconfig-visible on a GPU box,
# so no LD_LIBRARY_PATH manipulation is needed. EP order is [CUDA, CPU] with a silent
# fallback - GPU when available, CPU otherwise. No pip, no Python, no wheels.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["cuda", "download-binaries", "load-dynamic"], optional = true }
# Pin ort-sys to the EXACT version `ort =2.0.0-rc.9` was written against. `ort` only
# requires `ort-sys = "2.0.0-rc.9"`, which - under Cargo's pre-release semver - matches
# any `2.0.0-rc.N` with N >= 9 (rc.10, rc.11, rc.12, ...). Without `--locked`, a fresh
# resolve skews ort-sys FORWARD to the newest rc while ort stays pinned at rc.9; rc.10+
# regenerated the OrtApi bindings so the fn-pointer fields are non-null `fn` instead of
# `Option<fn>`, and rc.9's `ortsys!` macro calls `.unwrap_or_else()`/`.expect()` on them
# - 267 compile errors, so `cargo install --path .` fails WITHOUT `--locked`. Pinning
# ort-sys as a direct `=` dep forces the fresh resolution back to the matching rc.9, so
# `cargo install` (no `--locked`) resolves and compiles cleanly. Feature-gated with `ort`.
ort-sys = { version = "=2.0.0-rc.9", default-features = false, optional = true }
# Raw `flock(2)` for the cross-process advisory lock the turbovec store takes around
# its load+persist critical section, so a concurrent reader (another `rigger` process
# - a `parallel()` lens, a `rigger reindex`) never observes a half-written or
# index/meta-mismatched store. Only pulled in with the turbovec feature.
libc = { version = "0.2", optional = true }
kurrentdb = { version = "1.2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
testcontainers = { version = "0.27", optional = true }
# Structural grounding (spec 15, `symbols` feature). tree-sitter parses source into a
# concrete syntax tree; tree-sitter-tags runs each grammar's `tags` query to yield uniform
# definition/reference tags. `tree-sitter-tags` requires an exact `tree-sitter` MINOR, so it
# pins the runtime version; grammar crates couple only through `tree-sitter-language`, so a
# grammar's `LANGUAGE` (a `LanguageFn`) converts to `tree_sitter::Language` via `.into()`
# regardless of which `tree-sitter` minor built it. Unit 1 ships the Rust grammar; unit 2
# adds the remaining four on this same base. All optional, all under the `symbols` feature.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-tags = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = "3"
# Serializes the GPU-model tests: constructing an ort/CUDA session concurrently (as
# `cargo test`'s default thread-per-test would) corrupts the heap on a CUDA box. Every
# test that builds a `Turbovec` model is `#[file_serial(turbovec_model)]`; the
# `file_locks` feature makes that serialization a FILESYSTEM lock, so it holds across
# SEPARATE test binaries too - the lib tests and the `tests/cli.rs` subprocess never
# build a model at the same time. (The grounder's own CONSTRUCT_MU only covers a single
# process; this guards the test harness's cross-binary parallelism.)
serial_test = { version = "3", features = ["file_locks"] }

[profile.release]
opt-level = 3
