[package]
name = "riggervec"
version = "0.1.0"
edition = "2021"
description = "C-ABI shim over the turbovec crate so Rigger's Go grounder can call it via cgo"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
turbovec = { git = "https://github.com/RyanCodrai/turbovec" }

[profile.release]
opt-level = 3
